--- a/damda-django/requirements.txt
+++ b/damda-django/requirements.txt
@@ -6,7 +6,9 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.9.2
 Django==3.0.6
+django-appconf==1.0.4
 django-cors-headers==3.2.1
+django-imagekit==4.0.2
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
@@ -16,6 +18,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 mysqlclient==1.4.6
 openapi-codec==1.3.2
+pilkit==2.0
 pycparser==2.20
 PyJWT==1.7.1
 python-decouple==3.3
