--- a/damda/app/build.gradle
+++ b/damda/app/build.gradle
@@ -38,5 +38,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.retrofit2:retrofit:2.6.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
-
+    implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.27.0'
 }
