--- a/damda-django/requirements.txt
+++ b/damda-django/requirements.txt
@@ -19,6 +19,7 @@ MarkupSafe==1.1.1
 mysqlclient==1.4.6
 openapi-codec==1.3.2
 pilkit==2.0
+Pillow==7.1.2
 pycparser==2.20
 PyJWT==1.7.1
 python-decouple==3.3
