--- a/damda-django/requirements.txt
+++ b/damda-django/requirements.txt
@@ -5,10 +5,13 @@ chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.9.2
+defusedxml==0.6.0
 Django==3.0.6
+django-allauth==0.41.0
 django-appconf==1.0.4
 django-cors-headers==3.2.1
 django-imagekit==4.0.2
+django-rest-auth==0.9.5
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
@@ -17,13 +20,17 @@ itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 mysqlclient==1.4.6
+oauthlib==3.1.0
 openapi-codec==1.3.2
 pilkit==2.0
+Pillow==7.1.2
 pycparser==2.20
 PyJWT==1.7.1
 python-decouple==3.3
+python3-openid==3.1.0
 pytz==2020.1
 requests==2.23.0
+requests-oauthlib==1.3.0
 simplejson==3.17.0
 six==1.14.0
 sqlparse==0.3.1
