--- a/damda/app/build.gradle
+++ b/damda/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.afollestad:drag-select-recyclerview:2.3.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
