--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -21,14 +21,11 @@
             android:name="firebase_analytics_collection_enabled"
             android:value="false" />
 
-
-        <activity android:name=".LoginActivity">
-        android:usesCleartextTraffic="true"
-        >
         <!-- 배포시 삭제  userCleartextTraffic     -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
+
         <activity
             android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"
             android:launchMode="singleTop"
@@ -36,16 +33,21 @@
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="@string/kakao_scheme"
-                    android:host="@string/kakaolink_host" />
+
+                <data
+                    android:host="@string/kakaolink_host"
+                    android:scheme="@string/kakao_scheme" />
             </intent-filter>
         </activity>
+
         <service
             android:name=".LoginService"
             android:enabled="true"
             android:exported="true" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -53,13 +55,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".navigation.AddPhotoActivity" />
-        <activity android:name=".MainActivity">
 
-        </activity>
-
-        <service android:name=".firebase.MyFirebaseMessagingService">
+        <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVEN" />
             </intent-filter>
         </service>
     </application>
