--- a/damda/build.gradle
+++ b/damda/build.gradle
@@ -3,6 +3,8 @@
 buildscript {
     ext.KAKAO_SDK_VERESION='1.23.0'
     ext.kotlin_version = '1.3.72'
+    ext.constraint_version = '1.1.0'
+    ext.anko_version='0.10.5'
     repositories {
         google()
         jcenter()
@@ -11,6 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -34,4 +37,12 @@ subprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext{
+    rxAndroidVersion = '2.0.1'
+    rxJavaVersion = '2.1.3'
+    rxKotlin = '0.21.0'
+    rxKotlinVersion = '2.1.1'
+
 }
