S02P31B205-71 | Add logo-temp

--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         <service
             android:name=".SignupService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true">
+
+        </service>
 
         <activity android:name=".SignupActivity" /> <!-- 배포시 삭제  userCleartextTraffic -->
 
@@ -38,15 +40,11 @@
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".LoginActivity">
-<<<<<<< HEAD
-
-=======
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
->>>>>>> 31994c8781de0251826cad2d3bd3e868d4a2cb0c
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
