--- a/damda/app/build.gradle
+++ b/damda/app/build.gradle
@@ -23,6 +23,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            res.srcDirs =
+                    [
+                            'src/main/res/layouts/activity',
+                            'src/main/res/layouts/fragment',
+                            'src/main/res/layouts/item',
+                            'src/main/res'
+                    ]
+        }
+    }
 
 }
 
@@ -39,9 +50,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
     implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.27.0'
     implementation 'com.android.support:design:29.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
