--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -16,13 +16,13 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <service
-            android:name=".SignupService"
+            android:name=".retrofit.service.SignupService"
             android:enabled="true"
             android:exported="true">
 
         </service>
 
-        <activity android:name=".SignupActivity" /> <!-- 배포시 삭제  userCleartextTraffic -->
+        <activity android:name=".activity.SignupActivity" /> <!-- 배포시 삭제  userCleartextTraffic -->
 
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
@@ -30,7 +30,7 @@
         <meta-data
             android:name="firebase_analytics_collection_enabled"
             android:value="false" />
-        <activity android:name=".AddFamilyActivity"></activity>
+        <activity android:name=".activity.AddFamilyActivity"></activity>
         <!-- 배포시 삭제  userCleartextTraffic -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
@@ -40,7 +40,7 @@
             android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"
             android:launchMode="singleTop"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,17 +59,17 @@
         </activity>
 
         <service
-            android:name=".LoginService"
+            android:name=".retrofit.service.LoginService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddPhotoActivity" />
+        <activity android:name=".activity.AddPhotoActivity" />
 
         <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
