--- a/damda/app/build.gradle
+++ b/damda/app/build.gradle
@@ -30,6 +30,7 @@ android {
                             'src/main/res/layouts/activity',
                             'src/main/res/layouts/fragment',
                             'src/main/res/layouts/item',
+                            'src/main/res/layouts',
                             'src/main/res'
                     ]
         }
