--- a/damda/app/build.gradle
+++ b/damda/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.7'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 }
 
 apply plugin: 'com.google.gms.google-services'
