--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -15,12 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.AddMemberActivity"></activity>
+        <activity android:name=".activity.CropperActivity"></activity>
+        <activity android:name=".activity.AddMemberActivity" />
 
         <service
             android:name=".retrofit.service.SignupService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity android:name=".activity.SignupActivity" /> <!-- 배포시 삭제  userCleartextTraffic -->
         <meta-data
@@ -77,6 +78,10 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVEN" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
