--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.CropperActivity"></activity>
+        <activity android:name=".activity.RequestListActivity"></activity>
+        <activity android:name=".activity.CropperActivity" />
         <activity android:name=".activity.AddMemberActivity" />
 
         <service
@@ -63,8 +64,7 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.MainActivity">
-        </activity>
+        <activity android:name=".activity.MainActivity" />
         <activity android:name=".activity.AddPhotoActivity" />
 
         <service android:name=".MyFirebaseMessagingService">
