--- a/damda-django/requirements.txt
+++ b/damda-django/requirements.txt
@@ -4,9 +4,13 @@ cachetools==4.1.0
 certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
+click==7.1.2
+cmake==3.17.2
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.9.2
+cycler==0.10.0
+decorator==4.4.2
 defusedxml==0.6.0
 Django==3.0.6
 django-allauth==0.41.0
@@ -17,6 +21,9 @@ django-rest-auth==0.9.5
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
+dlib==19.19.0
+face-recognition==1.3.0
+face-recognition-models==0.3.0
 firebase-admin==4.3.0
 google-api-core==1.17.0
 google-api-python-client==1.8.3
@@ -30,11 +37,17 @@ googleapis-common-protos==1.51.0
 grpcio==1.29.0
 httplib2==0.17.3
 idna==2.9
+imagecodecs==2020.2.18
+imageio==2.8.0
 itypes==1.2.0
 Jinja2==2.11.2
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
+matplotlib==3.2.1
 msgpack==1.0.0
 mysqlclient==1.4.6
+networkx==2.4
+numpy==1.18.4
 oauthlib==3.1.0
 openapi-codec==1.3.2
 pilkit==2.0
@@ -44,14 +57,20 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyJWT==1.7.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
 python-decouple==3.3
 python3-openid==3.1.0
 pytz==2020.1
+PyWavelets==1.1.1
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
+scikit-image==0.17.2
+scipy==1.4.1
 simplejson==3.17.0
 six==1.14.0
 sqlparse==0.3.1
+tifffile==2020.5.11
 uritemplate==3.0.1
 urllib3==1.25.9
