--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.damda">
 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -16,16 +18,39 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <service
+            android:name=".ProgressNotificationService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activity.ProgressActivity" />
+
+        <service
+            android:name=".SendSelectedItemService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activity.SendSelectedItemActivity" />
+
+        <service
+            android:name=".SendAutoItemService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".activity.SendAutoItemActivity" />
+
+        <service
             android:name=".retrofit.service.RequestService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".activity.SplashActivity"
             android:theme="@style/SplashTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
+<!--             <intent-filter> -->
+<!--             <action android:name="android.intent.action.MAIN" /> -->
+<!--             <category android:name="android.intent.category.LAUNCHER" /> -->
+<!--             </intent-filter> -->
         </activity>
         <activity android:name=".activity.RequestListActivity" />
         <activity android:name=".activity.CropperActivity" />
@@ -78,14 +103,15 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.MainActivity" >
+        <activity android:name=".activity.MainActivity">
+        </activity>
+        <activity android:name=".activity.AddPhotoActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.AddPhotoActivity" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
