--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
              <category android:name="android.intent.category.LAUNCHER" />
              </intent-filter>
         </activity>
+        <activity android:name=".activity.FamilyListActivity" />
         <activity android:name=".activity.RequestListActivity" />
         <activity android:name=".activity.CropperActivity" />
         <activity android:name=".activity.AddMemberActivity" />
