--- a/damda-django/requirements.txt
+++ b/damda-django/requirements.txt
@@ -1,20 +1,30 @@
+amqp==2.5.2
 asgiref==3.2.7
+attrs==19.3.0
+autobahn==20.4.3
+Automat==20.2.0
+billiard==3.6.3.0
 CacheControl==0.12.6
 cachetools==4.1.0
+celery==4.4.2
 certifi==2020.4.5.1
 cffi==1.14.0
+channels==2.4.0
 chardet==3.0.4
 click==7.1.2
 cmake==3.17.2
+constantly==15.1.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==2.9.2
 cycler==0.10.0
+daphne==2.5.0
 decorator==4.4.2
 defusedxml==0.6.0
 Django==3.0.6
 django-allauth==0.42.0
 django-appconf==1.0.4
+django-celery-results==1.2.1
 django-cors-headers==3.2.1
 django-imagekit==4.0.2
 django-rest-auth==0.9.5
@@ -36,12 +46,16 @@ google-resumable-media==0.5.0
 googleapis-common-protos==1.51.0
 grpcio==1.29.0
 httplib2==0.17.3
+hyperlink==19.0.0
 idna==2.9
 imagecodecs==2020.2.18
 imageio==2.8.0
+importlib-metadata==1.6.0
+incremental==17.5.0
 itypes==1.2.0
 Jinja2==2.11.2
 kiwisolver==1.2.0
+kombu==4.6.8
 korean-lunar-calendar==0.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.1
@@ -57,7 +71,9 @@ protobuf==3.12.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+PyHamcrest==2.0.2
 PyJWT==1.7.1
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-decouple==3.3
@@ -69,9 +85,15 @@ requests-oauthlib==1.3.0
 rsa==4.0
 scikit-image==0.17.2
 scipy==1.4.1
+service-identity==18.1.0
 simplejson==3.17.0
 six==1.14.0
 sqlparse==0.3.1
 tifffile==2020.5.11
+Twisted==20.3.0
+txaio==20.4.1
 uritemplate==3.0.1
 urllib3==1.25.9
+vine==1.3.0
+zipp==3.1.0
+zope.interface==5.1.0
