S02P31B205-97 | Add celerybeat-schedule

--- a/.gitignore
+++ b/.gitignore
@@ -185,7 +185,7 @@ target/
 #Pipfile.lock
 
 # celery beat schedule file
-celerybeat-schedule
+celerybeat-schedule.*
 
 # SageMath parsed files
 *.sage.py
