--- a/damda/build.gradle
+++ b/damda/build.gradle
@@ -32,6 +32,8 @@ subprojects {
         mavenCentral()
         maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'
         }
+        maven { url 'https://jitpack.io' }
+
     }
 }
 
