--- a/damda-vue/package.json
+++ b/damda-vue/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "jwt-decode": "^2.2.0",
     "vue": "^2.6.11",
+    "vue-float-label": "^1.6.1",
     "vue-router": "^3.1.6",
     "vue-session": "^1.0.0",
     "vuetify": "^2.2.11",
