--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -19,10 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".activity.EditUserActivity"></activity>
+
         <service
             android:name=".retrofit.service.ScoreService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
         <service
             android:name=".retrofit.service.MissionService"
             android:enabled="true"
