--- a/damda-django/requirements.txt
+++ b/damda-django/requirements.txt
@@ -24,11 +24,13 @@ defusedxml==0.6.0
 Django==3.0.6
 django-allauth==0.42.0
 django-appconf==1.0.4
+django-celery-beat==2.0.0
 django-celery-results==1.2.1
 django-cors-headers==3.2.1
 django-imagekit==4.0.2
 django-rest-auth==0.9.5
 django-rest-swagger==2.2.0
+django-timezone-field==4.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 dlib==19.19.0
@@ -75,11 +77,13 @@ PyHamcrest==2.0.2
 PyJWT==1.7.1
 pyOpenSSL==19.1.0
 pyparsing==2.4.7
+python-crontab==2.5.1
 python-dateutil==2.8.1
 python-decouple==3.3
 python3-openid==3.1.0
 pytz==2020.1
 PyWavelets==1.1.1
+redis==3.5.3
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
