--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.EditUserActivity"></activity>
+        <activity android:name=".activity.SelectAlbumActivity"></activity>
+        <activity android:name=".activity.EditUserActivity" />
 
         <service
             android:name=".retrofit.service.ScoreService"
