--- a/damda/app/build.gradle
+++ b/damda/app/build.gradle
@@ -82,6 +82,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
     implementation 'life.knowledge4:k4l-video-trimmer:1.1.3-SNAPSHOT'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-compat:28.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
