--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -21,10 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.FindPasswordActivity"></activity>
-        <activity android:name=".activity.AlarmSwitchActivity"></activity>
-        <activity android:name=".activity.SelectAlbumActivity" />
-        <activity android:name=".activity.EditUserActivity" />
+        <activity android:name=".activity.FindPasswordActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"/>
+        <activity android:name=".activity.AlarmSwitchActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.SelectAlbumActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.EditUserActivity"
+            android:screenOrientation="portrait"/>
 
         <service
             android:name=".retrofit.service.ScoreService"
@@ -35,8 +40,10 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.AddVideoActivity" />
-        <activity android:name=".activity.TrimmerActivity" />
+        <activity android:name=".activity.AddVideoActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.TrimmerActivity"
+            android:screenOrientation="portrait"/>
 
         <service
             android:name=".retrofit.service.RequestService"
@@ -45,24 +52,31 @@
 
         <activity
             android:name=".activity.SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FamilyListActivity" />
-        <activity android:name=".activity.RequestListActivity" />
-        <activity android:name=".activity.CropperActivity" />
-        <activity android:name=".activity.AddMemberActivity" />
+        <activity android:name=".activity.FamilyListActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.RequestListActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.CropperActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AddMemberActivity"
+            android:screenOrientation="portrait"/>
 
         <service
             android:name=".retrofit.service.SignupService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.SignupActivity" /> <!-- 배포시 삭제  userCleartextTraffic -->
+        <activity android:name=".activity.SignupActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"/> <!-- 배포시 삭제  userCleartextTraffic -->
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
             android:value="false" />
@@ -81,7 +95,8 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
 
-        <activity android:name=".activity.AddFamilyActivity" /> <!-- 배포시 삭제  userCleartextTraffic -->
+        <activity android:name=".activity.AddFamilyActivity"
+            android:screenOrientation="portrait"/> <!-- 배포시 삭제  userCleartextTraffic -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
@@ -89,8 +104,11 @@
         <activity
             android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".activity.LoginActivity">
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="adjustResize"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -108,18 +126,22 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.AddPhotoActivity">
+        <activity android:name=".activity.MainActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activity.AddPhotoActivity"
+            android:screenOrientation="portrait">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name=".activity.MissionAddPhotoActivity" />
+        <activity android:name=".activity.MissionAddPhotoActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
+            android:theme="@style/Base.Theme.AppCompat"
+            android:screenOrientation="portrait"/>
 
         <service
             android:name=".ImageUpload"
