--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -127,7 +127,8 @@
             android:exported="true" />
 
         <activity android:name=".activity.MainActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".activity.AddPhotoActivity"
             android:screenOrientation="portrait">
 
