--- a/damda/app/build.gradle
+++ b/damda/app/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.damda"
+        applicationId "com.ebgbs.damda"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
