--- a/damda/app/src/main/AndroidManifest.xml
+++ b/damda/app/src/main/AndroidManifest.xml
@@ -11,11 +11,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-
     <application
-        android:name="com.ebgbs.damda.GlobalApplication"
+        android:name=".GlobalApplication"
         android:allowBackup="false"
-        tools:replace="android:allowBackup"
         android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher_damda"
         android:label="@string/app_name"
@@ -23,63 +21,77 @@
         android:roundIcon="@mipmap/ic_launcher_damda_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name="com.ebgbs.damda.activity.FindPasswordActivity"
+        android:usesCleartextTraffic="true"
+        tools:replace="android:allowBackup">
+        <activity android:name=".activity.ImagePickerActivity"></activity>
+        <activity android:name=".activity.ImagePickerOneActivity"></activity>
+        <activity
+            android:name=".activity.FindPasswordActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name="com.ebgbs.damda.activity.AlarmSwitchActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ebgbs.damda.activity.SelectAlbumActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ebgbs.damda.activity.EditUserActivity"
-            android:screenOrientation="portrait"/>
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".activity.AlarmSwitchActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SelectAlbumActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.EditUserActivity"
+            android:screenOrientation="portrait" />
 
         <service
-            android:name="com.ebgbs.damda.retrofit.service.ScoreService"
+            android:name=".retrofit.service.ScoreService"
             android:enabled="true"
             android:exported="true" />
         <service
-            android:name="com.ebgbs.damda.retrofit.service.MissionService"
-            android:enabled="true"
-            android:exported="true" />
-
-        <activity android:name="com.ebgbs.damda.activity.AddVideoActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ebgbs.damda.activity.TrimmerActivity"
-            android:screenOrientation="portrait"/>
-
-        <service
-            android:name="com.ebgbs.damda.retrofit.service.RequestService"
+            android:name=".retrofit.service.MissionService"
             android:enabled="true"
             android:exported="true" />
 
         <activity
-            android:name="com.ebgbs.damda.activity.SplashActivity"
-            android:theme="@style/SplashTheme"
-            android:screenOrientation="portrait">
+            android:name=".activity.AddVideoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.TrimmerActivity"
+            android:screenOrientation="portrait" />
+
+        <service
+            android:name=".retrofit.service.RequestService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".activity.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.ebgbs.damda.activity.FamilyListActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ebgbs.damda.activity.RequestListActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ebgbs.damda.activity.CropperActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ebgbs.damda.activity.AddMemberActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.FamilyListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.RequestListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.CropperActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.AddMemberActivity"
+            android:screenOrientation="portrait" />
 
         <service
-            android:name="com.ebgbs.damda.retrofit.service.SignupService"
+            android:name=".retrofit.service.SignupService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name="com.ebgbs.damda.activity.SignupActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait"/> <!-- 배포시 삭제  userCleartextTraffic -->
+        <activity
+            android:name=".activity.SignupActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" /> <!-- 배포시 삭제  userCleartextTraffic -->
         <meta-data
             android:name="firebase_messaging_auto_init_enabled"
             android:value="false" />
@@ -87,7 +99,7 @@
             android:name="firebase_analytics_collection_enabled"
             android:value="false" />
 
-        <service android:name="com.ebgbs.damda.MyFirebaseMessagingService">
+        <service android:name=".MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -98,8 +110,9 @@
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
 
-        <activity android:name="com.ebgbs.damda.activity.AddFamilyActivity"
-            android:screenOrientation="portrait"/> <!-- 배포시 삭제  userCleartextTraffic -->
+        <activity
+            android:name=".activity.AddFamilyActivity"
+            android:screenOrientation="portrait" /> <!-- 배포시 삭제  userCleartextTraffic -->
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key" />
@@ -107,11 +120,12 @@
         <activity
             android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait"/>
-        <activity android:name="com.ebgbs.damda.activity.LoginActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".activity.LoginActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -125,14 +139,16 @@
         </activity>
 
         <service
-            android:name="com.ebgbs.damda.retrofit.service.LoginService"
+            android:name=".retrofit.service.LoginService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name="com.ebgbs.damda.activity.MainActivity"
+        <activity
+            android:name=".activity.MainActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity android:name="com.ebgbs.damda.activity.AddPhotoActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".activity.AddPhotoActivity"
             android:screenOrientation="portrait">
 
             <!-- <intent-filter> -->
@@ -140,15 +156,16 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name="com.ebgbs.damda.activity.MissionAddPhotoActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".activity.MissionAddPhotoActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:theme="@style/Base.Theme.AppCompat" />
 
         <service
-            android:name="com.ebgbs.damda.ImageUpload"
+            android:name=".ImageUpload"
             android:permission="android.permission.BIND_JOB_SERVICE" />
     </application>
 
